Adjusting models and create train test split

--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -28,11 +28,11 @@
     "                         \"ORIGIN\", #International Air Transport Association's (IATA) Location Identifier code, unique 3 letter code matches to departure location\n",
     "                         \"ORIGIN_CITY_NAME\", #City name with state abbreviation used to match with us_cities 'City'\n",
     "                         \"DEST\", #International Air Transport Association's (IATA) Location Identifier code, unique 3 letter code matches to destination location\n",
-    "                         \"DISTANCE_GROUP\", #Miles between ORIGIN and DESTINATION, grouped together by integers,\n",
+    "                         \"DISTANCE_GROUP\", #Miles between ORIGIN and DESTINATION, grouped together by integers, see below this cell for a detailed description\n",
     "                         \"CRS_DEP_TIME\", #4 digit military time formatting of the planned departure time\n",
     "                         \"CRS_ARR_TIME\", #4 digit military time formatting of the planned arrival time\n",
     "                         \"DEP_DEL15\", #Binary number that classifies a delay (1) as: a aircraft departing 15 minutes later than planned\n",
-    "                         \"OP_UNIQUE_CARRIER\"\n",
+    "                         \"OP_UNIQUE_CARRIER\" #Categorical variable used to identify the carrier, an additional .CSV is provided to correlate these to full names\n",
     "                         ]\n",
     "\n",
     "cols_aircraft_inventory = [\"TAIL_NUM\", #Unique tail number of aircraft\n",
@@ -45,24 +45,37 @@
     "                     ]\n",
     "\n",
     "cols_airport_weather = [\"NAME\", #Location of weather reading\n",
-    "                        \"DATE\",\n",
-    "                        \"PRCP\",\n",
-    "                        \"SNOW\",\n",
-    "                        \"SNWD\",\n",
+    "                        \"DATE\", #Date in month/day/year format\n",
+    "                        \"PRCP\", #Preciptation that day in inches\n",
+    "                        \"SNOW\", #Snowfall that day in inches\n",
+    "                        \"SNWD\", #Depth of snow that day in inches\n",
     "                        \"TMAX\", #Maximum temperature that day in Fahrenheit\n",
     "                        \"AWND\" #Maximum wind speed that day in Miles per Hour\n",
     "                        ]\n",
     "\n",
-    "cols_us_cities = [\"City\",\n",
+    "cols_us_cities = [\"City\", #City name with state abbreviation used to match with ontime_reporting ORIGIN_CITY_NAME\n",
     "                  \"Median Age\",\n",
     "                  \"Total Population\",\n",
     "                  \"Average Household Size\"\n",
     "                  ]\n",
     "\n",
-    "cols_airport_geolocation = [\"iata\",\n",
-    "                            \"country_code\",\n",
+    "cols_airport_geolocation = [\"iata\", #International Air Transport Association's (IATA) Location Identifier code, unique 3 letter code\n",
+    "                            \"country_code\", #2 letter code that represents the country\n",
     "                            \"latitude\",\n",
-    "                            \"longitude\"]"
+    "                            \"longitude\"]\n",
+    "\n",
+    "#DISTANCE_GROUPS:\n",
+    "#1,\"Less Than 250 Miles\"\n",
+    "#2,\"250-499 Miles\"\n",
+    "#3,\"500-749 Miles\"\n",
+    "#4,\"750-999 Miles\"\n",
+    "#5,\"1000-1249 Miles\"\n",
+    "#6,\"1250-1499 Miles\"\n",
+    "#7,\"1500-1749 Miles\"\n",
+    "#8,\"1750-1999 Miles\"\n",
+    "#9,\"2000-2249 Miles\"\n",
+    "#10,\"2250-2499 Miles\"\n",
+    "#11,\"2500 Miles and Greater\"\n"
    ]
   },
   {
