Setup Baseline models

--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -167,14 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of airport_list_data:  (97, 2)\n",
+      "Shape of airport_list_data:  (97, 2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Shape of airport_weather_data:  (38675, 7)\n"
      ]
     }
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -233,14 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n",
+      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Shape of ontime_reporting_all after merge:  (6708260, 20)\n"
      ]
     }
@@ -263,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
