--- a/_1. Data Preprocessing/3. Splitting and encoding.ipynb
+++ b/_1. Data Preprocessing/3. Splitting and encoding.ipynb
@@ -17,44 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtypes = {\n",
-    "    \"MONTH\":\"int8\",\n",
-    "    \"DAY_OF_MONTH\":\"int8\",\n",
-    "    \"DAY_OF_WEEK\":\"int8\",\n",
-    "    \"OP_UNIQUE_CARRIER\":\"object\",\n",
-    "    \"CRS_DEP_TIME\":\"int16\",\n",
-    "    \"CRS_ARR_TIME\":\"int16\",\n",
-    "    \"DEP_DEL15\":\"bool\",\n",
-    "    \"DISTANCE_GROUP\":\"int16\",\n",
-    "    \"NUMBER_OF_SEATS\":\"int16\",\n",
-    "    \"AWND\":\"float64\",\n",
-    "    \"PRCP\":\"float64\",\n",
-    "    \"SNOW\":\"float64\",\n",
-    "    \"SNWD\":\"float64\",\n",
-    "    \"TMAX\":\"float64\",\n",
-    "    \"MEDIAN_AGE\":\"float64\",\n",
-    "    \"TOT_POP\":\"int64\",\n",
-    "    \"AVG_HOUSEHOLD_SIZE\":\"float64\", \n",
-    "    \"ORIGIN_LAT \":\"float64\",\n",
-    "    \"ORIGIN_LONG\":\"float64\",\n",
-    "    \"DEST_LAT\":\"float64\",\n",
-    "    \"DEST_LONG\":\"float64\",\n",
-    "    \"PREV_FLIGHT_DELAY\":\"bool\",\n",
-    "    \"PLANE_AGE\":\"int16\"\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ontime_reporting = pd.read_csv(path_import_and_export + \"ontime_reporting_clean_export.csv\", dtype=dtypes)"
+    "ontime_reporting = pd.read_csv(path_import_and_export + \"ontime_reporting_clean_export.csv\")"
    ]
   },
   {
