--- a/_2. Modeling/Random_Forests/Random_Forests_model.ipynb
+++ b/_2. Modeling/Random_Forests/Random_Forests_model.ipynb
@@ -29,7 +29,7 @@
     "    params = {\n",
     "        \"criterion\": trial.suggest_categorical(\"criterion\", [\"entropy\", \"gini\"]),\n",
     "        \"max_depth\": trial.suggest_int(\"max_depth\", 10, 200, step=10),\n",
-    "        \"max_features\": trial.suggest_categorical(\"max_features\", ['auto', 'sqrt','log2', None]),\n",
+    "        \"max_features\": trial.suggest_categorical(\"max_features\", ['sqrt','log2', None]),\n",
     "        \"min_samples_leaf\": trial.suggest_float(\"min_samples_leaf\", 0, 0.5, step=0.1),\n",
     "        \"min_samples_split\": trial.suggest_float(\"min_samples_split\", 0, 1),\n",
     "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 10, 810, step=50),\n",
