Ran all baseline models

--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "text": [
       "Shape of aircraft_inventory_data:  (7383, 3)\n",
       "Shape of ontime_reporting_all before merge:  (7422037, 13)\n",
-      "Shape of ontime_reporting_all after merge:  (7441892, 15)\n"
+      "Shape of ontime_reporting_all after merge:  (8478673, 15)\n"
      ]
     }
    ],
@@ -151,10 +151,10 @@
     "#Loading aircraft inventory list and merging it with ontime_reporting_all\n",
     "#Left joining inventory data on on-time reporting data, this would mean that some aircrafts could have missing values\n",
     "#These values could be imputed with the mean, it would introduce some noise\n",
-    "aircraft_inventory_data = pd.read_csv(path_import + \"B43_AIRCRAFT_INVENTORY.csv\", encoding='latin1', usecols=cols_aircraft_inventory)\n",
+    "aircraft_inventory_data = pd.read_csv(path_import + \"T_F41SCHEDULE_B43.csv\", encoding='latin1', usecols=cols_aircraft_inventory)\n",
     "print(\"Shape of aircraft_inventory_data: \", aircraft_inventory_data.shape)\n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
-    "ontime_reporting_all = ontime_reporting_all.merge(aircraft_inventory_data, on='TAIL_NUM', how=\"left\")\n",
+    "ontime_reporting_all = ontime_reporting_all.merge(aircraft_inventory_data, on='TAIL_NUM', how=\"inner\")\n",
     "print(\"Shape of ontime_reporting_all after merge: \", ontime_reporting_all.shape)"
    ]
   },
@@ -167,20 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of airport_list_data:  (97, 2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Shape of airport_list_data:  (97, 2)\n",
       "Shape of airport_weather_data:  (38675, 7)\n"
      ]
     }
@@ -195,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,21 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of ontime_reporting_all after merge:  (6708260, 20)\n"
+      "Shape of ontime_reporting_all before merge:  (8478673, 15)\n",
+      "Shape of ontime_reporting_all after merge:  (7732471, 20)\n"
      ]
     }
    ],
@@ -275,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,15 +321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (6708260, 20)\n",
-      "Shape of ontime_reporting_all before merge:  (6001976, 23)\n"
+      "Shape of ontime_reporting_all before merge:  (7732471, 20)\n",
+      "Shape of ontime_reporting_all before merge:  (6959322, 23)\n"
      ]
     }
    ],
@@ -362,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,15 +373,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (6001976, 23)\n",
-      "Shape of ontime_reporting_all after merge:  (5952741, 24)\n"
+      "Shape of ontime_reporting_all before merge:  (6959322, 23)\n",
+      "Shape of ontime_reporting_all after merge:  (6904014, 24)\n"
      ]
     }
    ],
@@ -408,15 +396,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (5952741, 24)\n",
-      "Shape of ontime_reporting_all after merge:  (5861885, 25)\n"
+      "Shape of ontime_reporting_all before merge:  (6904014, 24)\n",
+      "Shape of ontime_reporting_all after merge:  (6808079, 25)\n"
      ]
     }
    ],
@@ -438,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
