--- a/_2. Modeling/XGBoost/XGBoost_model.ipynb
+++ b/_2. Modeling/XGBoost/XGBoost_model.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_val_score\n",
     "from sklearn.metrics import roc_auc_score\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -36,74 +36,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtypes = {\n",
-    "    \"MONTH\":\"int8\",\n",
-    "    \"DAY_OF_MONTH\":\"int8\",\n",
-    "    \"DAY_OF_WEEK\":\"int8\",\n",
-    "    \"OP_UNIQUE_CARRIER\":\"object\",\n",
-    "    \"CRS_DEP_TIME\":\"int16\",\n",
-    "    \"CRS_ARR_TIME\":\"int16\",\n",
-    "    \"DEP_DEL15\":\"bool\",\n",
-    "    \"DISTANCE_GROUP\":\"category\",\n",
-    "    \"NUMBER_OF_SEATS\":\"int16\",\n",
-    "    \"AWND\":\"float64\",\n",
-    "    \"PRCP\":\"float64\",\n",
-    "    \"SNOW\":\"float64\",\n",
-    "    \"SNWD\":\"float64\",\n",
-    "    \"TMAX\":\"float64\",\n",
-    "    \"MEDIAN_AGE\":\"float64\",\n",
-    "    \"TOT_POP\":\"int64\",\n",
-    "    \"AVG_HOUSEHOLD_SIZE\":\"float64\", \n",
-    "    \"ORIGIN_LAT \":\"float64\",\n",
-    "    \"ORIGIN_LONG\":\"float64\",\n",
-    "    \"DEST_LAT\":\"float64\",\n",
-    "    \"DEST_LONG\":\"float64\",\n",
-    "    \"PREV_FLIGHT_DELAY\":\"bool\",\n",
-    "    \"PLANE_AGE\":\"int16\"\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ontime_reporting = pd.read_csv(path_import_and_export + \"ontime_reporting_clean_export.csv\", dtype=dtypes)\n",
-    "#ontime_reporting = pd.read_csv('/content/drive/MyDrive/Thesis Data/processed_data/ontime_reporting_clean_export.csv', dtype=dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = ontime_reporting.loc[:, ontime_reporting.columns != \"DEP_DEL15\"]\n",
-    "y = ontime_reporting[\"DEP_DEL15\"]\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Add One-Hot encoding for OP_UNIQUE_CARRIER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#https://forecastegy.com/posts/xgboost-hyperparameter-tuning-with-optuna/\n",
     "#https://aetperf.github.io/2021/02/16/Optuna-+-XGBoost-on-a-tabular-dataset.html\n",
     "#+ ChatGPT for debugging\n",
     "\n",
+    "# def objective_xgboost(trial):\n",
+    "#     params = {\n",
+    "#         \"n_estimators\": trial.suggest_int(\"max_depth\", 100, 1000, step=50),\n",
+    "#         \"verbosity\": 3,\n",
+    "#         \"learning_rate\": trial.suggest_float(\"learning_rate\", 0.01, 0.1),\n",
+    "#         \"max_depth\": trial.suggest_int(\"max_depth\", 1, 15),\n",
+    "#         \"subsample\": trial.suggest_float(\"subsample\", 0.5, 1.0),\n",
+    "#         \"colsample_bytree\": trial.suggest_float(\"colsample_bytree\", 0.5, 1.0),\n",
+    "#         \"min_child_weight\": trial.suggest_int(\"min_child_weight\", 1, 20),\n",
+    "#         \"enable_categorical\": True\n",
+    "#     }\n",
+    "\n",
+    "#     model_xgbClass = xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, tree_method=\"gpu_hist\") #enable_categorical=True\n",
+    "    \n",
+    "#     skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
+    "#     auc_scores = []\n",
+    "\n",
+    "#     for train_index, val_index in skfold.split(X_train, y_train):\n",
+    "#         X_train_fold, y_train_fold = X_train.iloc[train_index], y_train.iloc[train_index]\n",
+    "#         X_val_fold, y_val_fold = X_train.iloc[val_index], y_train.iloc[val_index]\n",
+    "\n",
+    "#         model_xgbClass.fit(X_train_fold, y_train_fold, \n",
+    "#                            eval_set = [(X_val_fold, y_val_fold)],\n",
+    "#                            early_stopping_rounds = 5,\n",
+    "#                            verbose = 3\n",
+    "#                            )\n",
+    "#         y_pred = model_xgbClass.predict(X_val_fold)#[:, 1]\n",
+    "#         auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
+    "\n",
+    "#     return np.mean(auc_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def objective_xgboost(trial):\n",
     "    params = {\n",
     "        \"n_estimators\": trial.suggest_int(\"max_depth\", 100, 1000, step=50),\n",
@@ -119,21 +93,10 @@
     "    model_xgbClass = xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, tree_method=\"gpu_hist\") #enable_categorical=True\n",
     "    \n",
     "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
-    "    auc_scores = []\n",
+    "    \n",
+    "    scores = cross_val_score(model_xgbClass, X_train, y_train, cv=skfold, scoring=\"roc_auc\")  \n",
     "\n",
-    "    for train_index, val_index in skfold.split(X_train, y_train):\n",
-    "        X_train_fold, y_train_fold = X_train.iloc[train_index], y_train.iloc[train_index]\n",
-    "        X_val_fold, y_val_fold = X_train.iloc[val_index], y_train.iloc[val_index]\n",
-    "\n",
-    "        model_xgbClass.fit(X_train_fold, y_train_fold, \n",
-    "                           eval_set = [(X_val_fold, y_val_fold)],\n",
-    "                           early_stopping_rounds = 5,\n",
-    "                           verbose = 3\n",
-    "                           )\n",
-    "        y_pred = model_xgbClass.predict(X_val_fold)#[:, 1]\n",
-    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
-    "\n",
-    "    return np.mean(auc_scores)"
+    "    return np.mean(scores)"
    ]
   },
   {
