--- a/_2. Modeling/1. Baselines/Baseline.ipynb
+++ b/_2. Modeling/1. Baselines/Baseline.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "import joblib\n",
+    "import torch\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
+    "import xgboost as xgb\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "random_state = 101\n",
+    "\n",
+    "path_csv = \"../../../../Thesis_data/processed_data/\"\n",
+    "path_model = \"../../../../Thesis_data/Models/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +56,6 @@
     "                    df[col] = df[col].astype(np.float32)\n",
     "                else:\n",
     "                    df[col] = df[col].astype(np.float64)\n",
-    "        else:\n",
-    "            df[col] = df[col].astype('category')\n",
     "\n",
     "    end_mem = df.memory_usage().sum() / 1024**2\n",
     "    print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
@@ -46,26 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
-    "import xgboost as xgb\n",
-    "\n",
-    "random_state = 101\n",
-    "\n",
-    "path_csv = \"../../../../Thesis_data/processed_data/\"\n",
-    "path_model = \"../../../../Thesis_data/Models/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory usage of dataframe is 1256.91 MB\n",
+      "Memory usage after optimization is: 242.04 MB\n",
+      "Decreased by 80.7%\n"
+     ]
+    }
+   ],
    "source": [
     "#Reducing memory usage\n",
     "X_train = rm(X_train)\n",
@@ -93,35 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Rvanl\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\sklearn\\utils\\validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-5 {color: black;background-color: white;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000, n_jobs=-1, random_state=16)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=1000, n_jobs=-1, random_state=16)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "LogisticRegression(max_iter=1000, n_jobs=-1, random_state=16)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logreg_baseline = LogisticRegression(random_state=101, n_jobs=-1, max_iter=1000)\n",
+    "logreg_baseline = LogisticRegression(random_state=random_state, n_jobs=-1)\n",
     "logreg_baseline.fit(X_train, y_train)\n",
-    "pickle.dump(logreg_baseline, open(path_model + \"logreg_baseline.sav\", 'wb'))"
+    "pickle.dump(logreg_baseline, open(path_model + \"logreg_baseline.pkl\", 'wb'))"
    ]
   },
   {
@@ -133,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "xgb_class_baseline = xgb.XGBClassifier(random_state=random_state, n_jobs=-1) #tree_method=\"gpu_hist\"\n",
     "xgb_class_baseline.fit(X_train, y_train)\n",
-    "pickle.dump(xgb_class_baseline, open(path_model + \"XGBoost_baseline.sav\", 'wb'))"
+    "pickle.dump(xgb_class_baseline, open(path_model + \"XGBoost_baseline.pkl\", 'wb'))"
    ]
   },
   {
@@ -155,9 +144,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TabNet_class_baseline = TabNetClassifier(seed=random_state, verbose=2, max_epochs=10, patience=5) #device_name=\"cuda\"\n",
-    "TabNet_class_baseline.fit(X_train.values, y_train)\n",
-    "pickle.dump(TabNet_class_baseline, open(path_model + \"TabNet_baseline.sav\", 'wb'))"
+    "tabnet_class_baseline = TabNetClassifier(seed=random_state, verbose=2) #device_name=\"cuda\"\n",
+    "tabnet_class_baseline.fit(X_train.values, y_train, max_epochs=50, batch_size=15000)\n",
+    "\n",
+    "path_model = \"/content/drive/MyDrive/Thesis Data/Models/\"\n",
+    "torch.save(tabnet_class_baseline, path_model + 'TabNet_baseline.pt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forests Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_baseline = RandomForestClassifier(random_state=random_state, n_jobs=-1, max_depth=20)\n",
+    "rf_baseline.fit(X_train, y_train)\n",
+    "joblib.dump(rf_baseline, path_model + 'rf_baseline.joblib') "
    ]
   }
  ],
