--- a/_2. Modeling/Random_Forests/Random_Forests_model.ipynb
+++ b/_2. Modeling/Random_Forests/Random_Forests_model.ipynb
@@ -25,6 +25,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def objective_rf(trial):\n",
+    "#     params = {\n",
+    "#         \"criterion\": trial.suggest_categorical(\"criterion\", [\"entropy\", \"gini\"]),\n",
+    "#         \"max_depth\": trial.suggest_int(\"max_depth\", 10, 200, step=10),\n",
+    "#         \"max_features\": trial.suggest_categorical(\"max_features\", ['sqrt','log2', None]),\n",
+    "#         \"min_samples_leaf\": trial.suggest_float(\"min_samples_leaf\", 0, 0.5, step=0.1),\n",
+    "#         \"min_samples_split\": trial.suggest_float(\"min_samples_split\", 0, 1),\n",
+    "#         \"n_estimators\": trial.suggest_int(\"n_estimators\", 10, 810, step=50),\n",
+    "#     }\n",
+    "\n",
+    "#     model_rfClass = RandomForestClassifier(**params, random_state=101, n_jobs=-1) #enable_categorical=True\n",
+    "\n",
+    "#     skfold = StratifiedKFold(n_splits=3, random_state=101, shuffle=True)\n",
+    "#     auc_scores = []\n",
+    "\n",
+    "#     for train_index, val_index in skfold.split(X_train, y_train):\n",
+    "#         X_train_fold, y_train_fold = X_train.iloc[train_index], y_train.iloc[train_index]\n",
+    "#         X_val_fold, y_val_fold = X_train.iloc[val_index], y_train.iloc[val_index]\n",
+    "\n",
+    "#         model_rfClass.fit(X_train_fold, y_train_fold)\n",
+    "#         y_pred = model_rfClass.predict(X_val_fold)\n",
+    "#         auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
+    "\n",
+    "#     return np.mean(auc_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def objective_rf(trial):\n",
     "    params = {\n",
     "        \"criterion\": trial.suggest_categorical(\"criterion\", [\"entropy\", \"gini\"]),\n",
