Working on tuned models

--- a/_2. Modeling/1. Baselines/Baseline.ipynb
+++ b/_2. Modeling/1. Baselines/Baseline.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_class_baseline = xgb.XGBClassifier(random_state=random_state, n_jobs=-1) #tree_method=\"gpu_hist\"\n",
+    "xgb_class_baseline = xgb.XGBClassifier(random_state=random_state, n_jobs=-1) #device_name=\"cuda\"\n",
     "xgb_class_baseline.fit(X_train, y_train)\n",
     "pickle.dump(xgb_class_baseline, open(path_model + \"XGBoost_baseline.pkl\", 'wb'))"
    ]
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabnet_class_baseline = TabNetClassifier(seed=random_state, verbose=2) #device_name=\"cuda\"\n",
+    "tabnet_class_baseline = TabNetClassifier(seed=random_state, verbose=2, device_name=\"cuda\")\n",
     "tabnet_class_baseline.fit(X_train.values, y_train, max_epochs=50, batch_size=15000)\n",
     "\n",
     "path_model = \"/content/drive/MyDrive/Thesis Data/Models/\"\n",
