--- a/_3. Evaluation/Baseline evaluation/Baseline_eval.ipynb
+++ b/_3. Evaluation/Baseline evaluation/Baseline_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,6 @@
     "import numpy as np\n",
     "from sklearn.metrics import roc_auc_score, balanced_accuracy_score, confusion_matrix, recall_score, precision_score, f1_score\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sn\n",
     "import torch\n",
     "import joblib\n",
     "\n",
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
     "\n",
     "    print(\"AUROC Score: \", auroc)\n",
     "    print(\"Balanced Accuracy Score: \", bal_acc)\n",
-    "    print(\"Accuracy Score: \", f1)\n",
+    "    print(\"F1 Score: \", f1)\n",
     "    print(\"Recall Score: \", recall)\n",
     "    print(\"Precision Score: \", precis)\n",
     "    cm = confusion_matrix(y_test_input, y_pred_input)\n",
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +121,7 @@
     }
    ],
    "source": [
-    "X_test = rm(X_test) #I think this breaks TabNet .fit function\n",
+    "X_test = rm(X_test)\n",
     "y_test = np.ravel(y_test)"
    ]
   },
